--- a/main.html
+++ b/main.html
@@ -3,11 +3,25 @@
 <html>
 
 <head>
+	<style>
+		body{
+			background-color:yellow;
+			text-align:center;
+		}
+	</style>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<h1 id="f1">Flowers photos</h1>
+		<p>Painting is silent poetry, and poetry is painting that speaks.</p>
+	</div>
+	<div>
+		<h1 id="f2">Roses pictures</h1>
+		<p>Roses pictures</p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
